(Images): png/jpg - to webp

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon/favicon-32x32.png"
+      href="./images/favicon/favicon-32x32.webp"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./images/favicon/favicon-16x16.png"
+      href="./images/favicon/favicon-16x16.webp"
     />
     <title>КЛУБ ЧЕТЫРЕХ КОНЕЙ</title>
     <link rel="stylesheet" href="./styles/main.css" />
@@ -115,7 +115,7 @@
               </h3>
               <img
                 class="event-promo__players"
-                src="./images/promo/chess-players.jpg"
+                src="./images/promo/chess-players.webp"
                 alt="Гроссмейстер играет сеанс одновременной игры в шахматы"
                 width="394"
                 height="250"
@@ -129,7 +129,7 @@
             <div class="event-promo__grandmaster grandmaster">
               <img
                 class="grandmaster__logo"
-                src="./images/promo/Grandmaster.jpg"
+                src="./images/promo/Grandmaster.webp"
                 alt="Гроссмейстер сосредоточенно играет партию в шахматы"
                 loading="lazy"
                 width="474"
@@ -145,7 +145,7 @@
                 />
                 <img
                   class="grandmaster__bang-horse"
-                  src="./images/promo/horse.jpg"
+                  src="./images/promo/horse.webp"
                   alt=""
                   loading="lazy"
                   aria-hidden="true"
@@ -153,7 +153,7 @@
               </div>
               <img
                 class="grandmaster__hand"
-                src="./images/promo/Hand.png"
+                src="./images/promo/Hand.webp"
                 alt=""
                 loading="lazy"
                 width="174"
@@ -403,7 +403,7 @@
           </div>
           <img
             class="stages-transformation__airplane"
-            src="./images/stages-transformation/Airplane.png"
+            src="./images/stages-transformation/Airplane.webp"
             width="376"
             height="140"
             alt="Старый самолёт как символ будущего аэропорта «Большие Васюки»"
@@ -474,7 +474,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Александр Алехин"
                     loading="lazy"
                   />
@@ -494,7 +494,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Эммануил Ласкер"
                     loading="lazy"
                   />
@@ -514,7 +514,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Александр Алехин"
                     loading="lazy"
                   />
@@ -534,7 +534,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Арон Нимцович"
                     loading="lazy"
                   />
@@ -554,7 +554,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Рихард Рети"
                     loading="lazy"
                   />
@@ -574,7 +574,7 @@
                 <figure class="participant__figure">
                   <img
                     class="participant__image"
-                    src="./images/participants/participant.png"
+                    src="./images/participants/participant.webp"
                     alt="Остап Бендер"
                     loading="lazy"
                   />
